welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:34: error: not found: value S
			S = changeTableau(T,dec);
                        ^Array2:35: error: not found: value S
				setCouleurBrosse(S(0))
                                                 ^Array2:39: error: not found: value S
				setCouleurBrosse(S(d))
                                                 ^